--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ylbb-system-kindergarten",
+  "name": "ylbb-system-yunfendian",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 8089",
     "build": "ng build --prod",
     "test": "ng build --prod --configuration=test",
-    "push-dev": "rm -rf /Users/phuhoang/test-83/ylbb-system-kindergarten && mv /Users/phuhoang/Desktop/ylbb-system-kindergarten/dist/ylbb-system-kindergarten /Users/phuhoang/test-83/ylbb-system-kindergarten && cd /Users/phuhoang/test-83 && git pull && git add . && git commit -m '-' && git push",
-    "push-prod": "cd /Users/phuhoang/repository/hcz-kindergarten && rm -rf *.js *.html assets *.txt *.png *.css *.ico && mv /Users/phuhoang/Desktop/ylbb-system-kindergarten/dist/ylbb-system-kindergarten/* /Users/phuhoang/repository/hcz-kindergarten && git pull && git add . && git commit -m '-' && git push",
+    "push-dev": "rm -rf /Users/phuhoang/test-83/ylbb-system-yunfendian && mv /Users/phuhoang/Desktop/ylbb-system-yunfendian/dist/ylbb-system-yunfendian /Users/phuhoang/test-83/ylbb-system-yunfendian && cd /Users/phuhoang/test-83 && git pull && git add . && git commit -m '-' && git push",
+    "push-prod": "cd /Users/phuhoang/repository/hcz-kindergarten && rm -rf *.js *.html assets *.txt *.png *.css *.ico && mv /Users/phuhoang/Desktop/ylbb-system-yunfendian/dist/ylbb-system-yunfendian/* /Users/phuhoang/repository/hcz-kindergarten && git pull && git add . && git commit -m '-' && git push",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
